- Fixed a few layout bugs - Left sidebar now renders properly - Fixed the main panel not panning on touch

--- a/css/AlbumStyles.css
+++ b/css/AlbumStyles.css
@@ -76,7 +76,7 @@ html, body {
 }
 
 .mainContentContainer {
-	padding: 0px 15px 0 0;
+	padding: 15px 15px 0 0;
 	position: relative;
 	width: 100%;
 	box-sizing: border-box;
