--- a/css/framework.css
+++ b/css/framework.css
@@ -70,6 +70,7 @@ h1 {
 }
 
 #mainContent {
+	background-color: #e8e8e8;
     position:absolute;
     left: 0;
     right: 0;
